Ajustes para conecta

--- a/webapp/root.html
+++ b/webapp/root.html
@@ -34,7 +34,7 @@
 
     <!-- CSS Should always go first -->
     <link rel='stylesheet' class='code_theme'>
-
+    <link rel='stylesheet' class='conecta_theme'>
 </head>
 <body>
     <div id='root'>
